--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^3.7.1",
+    "leaflet": "^1.7.1",
+    "numeral": "^2.0.6",
     "react": "^18.0.0",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^18.0.0",
+    "react-leaflet": "^3.2.5",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
